edit layout and style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Laravel Boolfolio - API</title>
+        <title>Portfolio</title>
 
         <!-- FONTAWESOME -->
         <link rel="stylesheet"
@@ -13,8 +13,18 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     </head>
+
     <body>
+
+        <div class="overlay" id="blur"></div>
+        <div id="blob"></div>
+
         <div id="app"></div>
+
         <script type="module" src="/src/main.js"></script>
+
+        <script src="/src/blob.js"></script>
+
     </body>
+
 </html>
